--- a/package.json
+++ b/package.json
@@ -1,51 +1,54 @@
 {
-  "name": "campuscommunity",
-  "version": "1.0.0",
-  "main": "index.ts",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@expo/vector-icons": "^15.0.3",
-    "@react-three/drei": "^10.7.6",
-    "@react-three/fiber": "^9.4.0",
-    "@tamagui/animations-react-native": "^1.135.4",
-    "@tamagui/babel-plugin": "^1.135.4",
-    "@tamagui/config": "^1.135.4",
-    "@tamagui/font-inter": "^1.135.4",
-    "@tamagui/themes": "^1.135.4",
-    "axios": "^1.12.2",
-    "babel-preset-expo": "^54.0.6",
-    "date-fns": "^4.1.0",
-    "expo": "~54.0.20",
-    "expo-auth-session": "^7.0.8",
-    "expo-blur": "^15.0.7",
-    "expo-constants": "^18.0.10",
-    "expo-gl": "^16.0.7",
-    "expo-haptics": "^15.0.7",
-    "expo-linear-gradient": "^15.0.7",
-    "expo-router": "^6.0.13",
-    "expo-secure-store": "^15.0.7",
-    "expo-status-bar": "~3.0.8",
-    "expo-web-browser": "^15.0.8",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0",
-    "tamagui": "^1.135.4",
-    "three": "^0.180.0"
-  },
-  "devDependencies": {
-    "@types/react": "~19.1.0",
-    "@types/react-native": "^0.72.8",
-    "typescript": "~5.9.2"
-  },
-  "private": true
+    "name": "campuscommunity",
+    "version": "1.0.0",
+    "main": "index.ts",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web"
+    },
+    "dependencies": {
+        "@expo/vector-icons": "^15.0.3",
+        "@react-native-async-storage/async-storage": "^1.23.1",
+        "@react-native-community/netinfo": "^11.0.3",
+        "@react-three/drei": "^10.7.6",
+        "@react-three/fiber": "^9.4.0",
+        "@tamagui/animations-react-native": "^1.135.4",
+        "@tamagui/babel-plugin": "^1.135.4",
+        "@tamagui/config": "^1.135.4",
+        "@tamagui/font-inter": "^1.135.4",
+        "@tamagui/themes": "^1.135.4",
+        "axios": "^1.12.2",
+        "babel-preset-expo": "^54.0.6",
+        "date-fns": "^4.1.0",
+        "expo": "~54.0.20",
+        "expo-auth-session": "^7.0.8",
+        "expo-blur": "^15.0.7",
+        "expo-constants": "^18.0.10",
+        "expo-gl": "^16.0.7",
+        "expo-haptics": "^15.0.7",
+        "expo-image": "^1.12.12",
+        "expo-linear-gradient": "^15.0.7",
+        "expo-router": "^6.0.13",
+        "expo-secure-store": "^15.0.7",
+        "expo-status-bar": "~3.0.8",
+        "expo-web-browser": "^15.0.8",
+        "react": "19.1.0",
+        "react-dom": "19.1.0",
+        "react-native": "0.81.5",
+        "react-native-gesture-handler": "~2.28.0",
+        "react-native-reanimated": "~4.1.1",
+        "react-native-safe-area-context": "^5.6.1",
+        "react-native-screens": "~4.16.0",
+        "react-native-web": "^0.21.0",
+        "tamagui": "^1.135.4",
+        "three": "^0.180.0"
+    },
+    "devDependencies": {
+        "@types/react": "~19.1.0",
+        "@types/react-native": "^0.72.8",
+        "typescript": "~5.9.2"
+    },
+    "private": true
 }
